Fix navbar on small screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,9 @@ nav {
 nav a {
   color: white;
 }
+.navbar-button {
+  background-color: white;
+}
 body {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   background-color: #DFDBE5;
